@@ -1,0 +1,8 @@
+#!/bin/sh
+#BASE_DIRECTORY=/home/danny/src/cegcc/svn.sf.net/cegcc/trunk/cegcc/src
+LIBVER=$(grep libtool_VERSION= ${BASE_DIRECTORY}/gcc/libstdc++-v3/configure | sed -e 's/libtool_VERSION=//')
+LIBVER_c=$(echo $LIBVER | awk -F: '{print $1}')
+LIBVER_r=$(echo $LIBVER | awk -F: '{print $2}')
+LIBVER_a=$(echo $LIBVER | awk -F: '{print $3}')
+LIBSTDCPP_DLLVER=$(($LIBVER_c - $LIBVER_a))
+echo $LIBSTDCPP_DLLVER
